src/test/ui/variance/variance-use-invariant-struct-1.base.stderr
error[E0308]: mismatched types
  --> $DIR/variance-use-invariant-struct-1.rs:14:5
   |
LL |     v
   |     ^ lifetime mismatch
   |
   = note: expected struct `SomeStruct<&'min ()>`
              found struct `SomeStruct<&'max ()>`
note: the lifetime `'min` as defined here...
  --> $DIR/variance-use-invariant-struct-1.rs:10:8
   |
LL | fn foo<'min,'max>(v: SomeStruct<&'max ()>)
   |        ^^^^
note: ...does not necessarily outlive the lifetime `'max` as defined here
  --> $DIR/variance-use-invariant-struct-1.rs:10:13
   |
LL | fn foo<'min,'max>(v: SomeStruct<&'max ()>)
   |             ^^^^

error[E0308]: mismatched types
  --> $DIR/variance-use-invariant-struct-1.rs:23:5
   |
LL |     v
   |     ^ lifetime mismatch
   |
   = note: expected struct `SomeStruct<&'max ()>`
              found struct `SomeStruct<&'min ()>`
note: the lifetime `'min` as defined here...
  --> $DIR/variance-use-invariant-struct-1.rs:19:8
   |
LL | fn bar<'min,'max>(v: SomeStruct<&'min ()>)
   |        ^^^^
note: ...does not necessarily outlive the lifetime `'max` as defined here
  --> $DIR/variance-use-invariant-struct-1.rs:19:13
   |
LL | fn bar<'min,'max>(v: SomeStruct<&'min ()>)
   |             ^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
